Fix close embed on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -97,6 +97,10 @@
     bottom: 7px;
     right: 7px;
   }
+
+  .twitch-embed-close {
+    opacity: 0;
+  }
 }
 
 .twitch-embed:hover .twitch-embed-close {
